# PlayRustClassifier

./: .gitignore  Cargo.toml  README.md  rust  rustc.version
python/: benchmark.py  model_generator.py
src/: feature_extraction.rs  lib.rs  reddit.rs  util.rs
static_data/: words_of_interest
