[package]
authors = ["insanitybit <insanitybit@gmail.com>"]
name = "playrust_alert"
version = "0.1.0"

[dependencies]
clap = "2.9.2"
csv = "0.14.*"
dedup_by = "*"
hyper = "0.9.*"
lazy_static = "0.2.*"
rand = "0.3.*"
rayon = "0.4.0"
regex = "0.1.*"
rust-tfidf = "1.0.*"
rustc-serialize = "0.3.*"
serde = "0.8.*"
serde_json = "0.8.*"
serde_macros = "0.8.*"
stopwatch = "*"
tiny-keccak = "1.0.*"
rustlearn = "0.4.1"
fnv = "*"
[dependencies.ndarray]
features = ["rustc-serialize"]
version = "0.6"

# [dependencies.pencil]
# path = "../pencil/"

[dependencies.rsml]
path = "../rsml/"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false
# panic = 'abort'

# -C target-feature and -C target-cpu
