[package]
authors = ["insanitybit <insanitybit@gmail.com>"]
name = "playrust_alert"
version = "0.1.0"
edition = "2018"

[dependencies]
bincode = "1.3.3"
clap = "2.33.3"
csv = "1.1.6"
dedup_by = "0.1.0"
fnv = "1.0.7"
# hyper = "0.14.8"
lazy_static = "1.4.0"
rand = "0.3"
rayon = "1.5.1"
regex = "1.5.4"
reqwest = { version = "0.11.3", features = ["blocking"] }
rsml = "0.1.0"
rust-tfidf = "1.1.1"
rustlearn = "0.5.0"
# rustc-serialize = "0.3.24"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
# serde_macros = "0.8.9"
stopwatch = "0.0.7"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }

[dependencies.ndarray]
features = ["serde"]
version = "0.15.3"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
rpath = false

[[bin]]
path = "src/bin/generate_features_csv.rs"
name = "generate_features_csv"

[[bin]]
path = "src/bin/generate_freqs.rs"
name = "generate_freqs"

[[bin]]
path = "src/bin/model_generator.rs"
name = "model_generator"

[[bin]]
path = "src/bin/predictor.rs"
name = "predictor"
